--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
         <h3>Percent of Population Living in Urban Area</h3>
 
         <img src="legendUSA.JPG" alt="Color Legend Showing Percent Urban" style="width:300px;height:50px;">
-        <div id="observablehq-viewof-yearAnimate-2fa2d155"></div>
+        <div id="observablehq-viewof-yearAnimateUSA-2fa2d155"></div>
         <div id="observablehq-USA-2fa2d155"></div>
         <script type="module">
         import {Runtime, Inspector} from "https://cdn.jsdelivr.net/npm/@observablehq/runtime@4/dist/runtime.js";
         import define from "https://api.observablehq.com/d/5e306de95b6c7c96.js?v=3";
         new Runtime().module(define, name => {
-        if (name === "viewof yearAnimate") return new Inspector(document.querySelector("#observablehq-viewof-yearAnimate-2fa2d155"));
+        if (name === "viewof yearAnimateUSA") return new Inspector(document.querySelector("#observablehq-viewof-yearAnimateUSA-2fa2d155"));
         if (name === "USA") return new Inspector(document.querySelector("#observablehq-USA-2fa2d155"));
         });
         </script>
