radio button padding added

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             <!-- Seventh Data Viz - District Comparison MCA Scores-->
                 <h3>Percent of Students with MCA Level By District</h3>
                 <p>The Minnesota Comprehensive Assessment (M.C.A) is taken by all 11th grade Minnesota students and provides details in performance in Reading, Math, and Science. The following graphs allow for a closer look at the percent of students in Wayzata and Rockford that Exceeds Standards, Meets Standards, Partially Meets Standards, and Do Not Meet Standards in the subject MCA test in 2018. Both districts perform similarly, but Rockford Exceeds standards less and Does Not Meet Standards more than Wayzata school district students.</p>
-                <div id="observablehq-viewof-ratings-07b2c6c6"></div>
+                <div id="observablehq-viewof-ratings-07b2c6c6" class="radio1"></div>
                 <div class="wrapper">
                     <div id="observablehq-districtReading2018-07b2c6c6"></div>
                     <div id="observablehq-districtMath2018-07b2c6c6"></div>
