add some descriptions

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                 <div class="grid2">
                     <h3 class="halftitle">Per-Student District Funding</h3>
                     <div id="observablehq-districtFunding-99f30a37" class="halfgraph"></div>
-                    <p class="halftext">We also wanted to look at per-student funding and expenses in these two neighboring districts. Specifically, we were interested in how neighboring geographies might have different per-student revenues, expenditures, and net totals based on their different level of Urbanicity. Both districts have a net per-student between $300 and $500, but Wayzata makes more revenue per-student and has greater expenditures per student.</p>
+                    <p class="halftext">We also wanted to look at per-student funding and expenses in these two neighboring districts. Specifically, we were interested in how neighboring geographies might have different per-student revenues, expenditures, and net totals based on their different level of Urbanicity. Both districts have a similar net total per-student (within the $300-$500 range) but Wayzata makes more revenue per student and has greater expenditures per student. Hover over the green bars to view the per-student revenues of each district, the red bars to view the per-student expenditures of each district, and the black line to view the net totals of each district.</p>
                 </div>
             </div>
 
@@ -163,7 +163,7 @@
                 <div class="grid2">
                     <h3 class="halftitleopposite">Composite ACT Scores</h3>
                     <div id="observablehq-districtACTChart-1983ab89" class="halfgraphopposite"></div>
-                    <p class="halftextopposite">The ACT is somewhat of a proxy for college-readiness, since it is a required test for many college admissions process. We compared Wayzata, Rockford, and the entirety of Minnesota, and found Rockford to be near average, whereas Wayzata was about 4 points more than the Minnesota average on this test.</p>
+                    <p class="halftextopposite">The ACT is somewhat of a proxy for college-readiness, since it is a required test for many college admissions process. We compared Wayzata, Rockford, and the entirety of Minnesota (represented by the black line), and found Rockford to be near average, whereas Wayzata was about 4 points more than the Minnesota average on this test.</p>
                 </div>
             </div>
 
@@ -172,7 +172,7 @@
                 <div class="grid2">
                     <h3 class="halftitle">16 Month Higher Education Enrollment Rates</h3>
                     <div class="halftext">
-                        <p>Since college is a major indicator of the social norms and responsibilities a community feels towards education, it is an excellent way to gauge how rural versus urban areas view education in their attempts to pursue it. Here we see that Rockford has slightly less than the Minnesota average percent enrolling in an institution of higher education within 16 months of graduation, whereas around <b>20%</b> more than average enroll in higher education from Wayzata.</p>
+                        <p>Since college is a major indicator of the social norms and responsibilities a community feels towards education, it is an excellent way to gauge how rural versus urban areas view education in their attempts to pursue it. Here we see that Rockford has slightly less than the Minnesota average percent enrolling in an institution of higher education within 16 months of graduation, whereas around 20% more than average enroll in higher education from Wayzata.</p>
                     </div>
                     <div id="observablehq-districtIHE-099cb61a" class="halfgraph"></div>
                 </div>
