--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
         <div id="fullpage">
             <div class="section" id="title" height=100vh>
                 <h1>HIGH SCHOOL ACHIEVEMENT GAPS: </h1>
-                <h1>National & District Level Outcomes</h1>
+                <h1>National & Minnesota Outcomes</h1>
             </div>
             
             <div class="section" id="nationalTitle" height=100vh>
                 <h2>National Urbanicity and Outcomes</h2>
-                <p><em>O</em>ver the last <b>100+</b> years, the United States have become increasingly urbanized. It is estimated that in 2021, <b>83%</b> of the United State's population lives in some kind of urban area. With so many people living in an urban area, what does the remaining <b>17%</b> experience? What do those in the <i>most</i> urban areas experience? We decided to look at this in terms of education, considered to be the great equalizer. Is education effected by district urbanicity? How might this great equalizer fail in consideration of locale type?</p>
+                <p><em>O</em>ver the last <b>100+</b> years, the United States has become increasingly urbanized. It is estimated that in 2021, <b>83%</b> of the United State's population lives in some kind of urban area. With so many people living in an urban area, what does the remaining <b>17%</b> experience? What do those in the <i>most</i> urban areas experience? We decided to look at this in terms of education, considered to be the great equalizer. Is education affected by district urbanicity? How might this great equalizer fail in consideration of locale type?</p>
             </div>
 
             <div class="section" id="USAMap" height=100vh>
@@ -103,7 +103,7 @@
             <div class="section" id="interactDescript" height=100vh>
                 <p line-height= "0em;" font-size= "12px;" class="pcondensed">Using Minnesota as a case study, how might locale influence high school outcomes like dropout rates and test scores? How might locale influence different groups of high schoolers differently? The following interactive graphic attempts to explore those questions. 
                     <br> <br>
-                    When comparing the average outcomes of four categories of locale (Rural school districts, Town school districts, Suburb school districts, and City school districts), differences are noticeable, but differences that persist across all three outcomes aren't.  Explore the data yourself: use the dropdown menu to switch between the three outcomes to see how each locale performs on average.
+                    When comparing the average outcomes of four categories of locale (Rural school districts, Town school districts, Suburb school districts, and City school districts), differences are noticeable, but differences that persist across all three outcomes aren't. Explore the data yourself: use the dropdown menu to switch between the three outcomes to see how each locale performs on average. Note: The ACT College Readiness Benchmark (CRB) is a benchmark score designated to represent college preparedness. In the year represented, 2017-2018, the CRBs were 18 for English, 22 for Math, 22 for Reading, and 23 for Science. The outcome represented here is the rate of students who met the benchmark for all four of those categories.
                     <br> <br>
                     When you dig into more precise locale categories, however, consistent trends are more noticeable. When you look at rural and town school districts, remote and/or distant districts consistently do worse than "fringe" districts (districts that are near suburban or urban areas), and large city school districts consistently do much worse than small and mid-size city districts. It seems that the "extremes" (large city school districts and remote school districts) suffer. Explore the data yourself by toggling between the locale category choices, as well as continuing to switch between outcomes as desired.
                     <br> <br>
