--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div id="fullpage">
             <div class="section" id="title" height=100vh>
                 <h1>HIGH SCHOOL ACHIEVEMENT GAPS: </h1>
-                <h1>National & Minnesota Outcomes</h1>
+                <h1>National & District Level Outcomes</h1>
             </div>
             
             <div class="section" id="nationalTitle" height=100vh>
