--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                 <br>
                 Special thanks to Lauren Milne, for guiding us throughout this process. 
                 <br>
-                The data visualizations on this website were created using the D3 JavaScript library, created by Mike Bostock. Source code can be found here: (link a consolidated observable notebook?)
+                The data visualizations on this website were created using the D3 JavaScript library, created by Mike Bostock. Source code can be found here: https://observablehq.com/@58d721f61cd5dec7/high-school-achievement-gaps-national-minnesota-outcomes
                 <br>
                 Sources:</p>
                 <ul>State-level urban percentage of the population, 1900-2010: U.S. Census data, compiled by the Iowa State University Iowa Community Indicators Program, <a href = "https://www.icip.iastate.edu/tables/population/urban-pct-states">https://www.icip.iastate.edu/tables/population/urban-pct-states</a></ul>
